--- a/thesis/conclusion.tex
+++ b/thesis/conclusion.tex
@@ -1,1 +1,7 @@
 \subsection{Conclusion}
+
+Corollary~\ref{cor:np} and theorem~\ref{thm:nphard} directly yields the following corollary: \\
+
+\begin{cor}
+The (offline, no-rotation, acyclic) k-cleared-cells problem is NP-complete.
+\end{cor}
