--- a/thesis/np.tex
+++ b/thesis/np.tex
@@ -49,5 +49,6 @@ One can count the total amount of cleared cells simply by scanning the gameboard
 This naturally leads us to the following corollary:\\
 
 \begin{cor}
-The k-cleared-cells problem is in NP.
+\label{cor:np}
+The (offline, no-rotation, acyclic) k-cleared-cells problem $\in$ NP.
 \end{cor}
