--- a/thesis/phase2.tex
+++ b/thesis/phase2.tex
@@ -19,6 +19,7 @@ In this phase a single $\mathbf{X}_H$ block is generated. From the invariants pr
             \end{tikzpicture}
         }
         \caption{}
+        \vspace*{0.5cm}
     \end{subfigure}
     \hspace{0.05\textwidth}
     \begin{subfigure}[b]{0.35\textwidth}
@@ -36,6 +37,7 @@ In this phase a single $\mathbf{X}_H$ block is generated. From the invariants pr
             \end{tikzpicture}
         }
         \caption{}
+        \vspace*{0.5cm}
     \end{subfigure}
 
     \begin{subfigure}[b]{0.35\textwidth}
