--- a/thesis/phase1.tex
+++ b/thesis/phase1.tex
@@ -81,6 +81,7 @@ Thus all parts of the lemma holds.
             \end{tikzpicture}
         }
         \caption{First block}
+        \vspace*{0.5cm}
     \end{subfigure}
 
     \begin{subfigure}[b]{0.55\textwidth}
@@ -103,6 +104,7 @@ Thus all parts of the lemma holds.
             \end{tikzpicture}
         }
         \caption{Middle blocks}
+        \vspace*{0.5cm}
     \end{subfigure}
 
     \begin{subfigure}[b]{0.55\textwidth}
