--- a/thesis/phase2.tex
+++ b/thesis/phase2.tex
@@ -1,6 +1,8 @@
 \subsubsection{Phase 2}
 \label{subsub:phasetwo}
-In this phase a single $\mathbf{X}_H$ block is generated. From the invariants presented in~\ref{subsub:phaseone} we know that the top of the two wells must be in one of the two states presented in~\autoref{fig:openclosed}. Thus the only non-losing option is to place the $\mathbf{X}_H$ block in such a way that it closes one of the wells permanently. Note that if any well was permanently closed before this phase, this placement renders both of the wells permanently closed, making it impossible to clear any more cells during the game.
+In this phase a single $\mathbf{X}_H$ block is generated. From the invariants presented in~\ref{subsub:phaseone} we know that the top of the two wells must be in one of the two states presented in~\autoref{fig:openclosed}. Thus the only non-losing option is to place the $\mathbf{X}_H$ block in such a way that it closes one of the wells permanently. This placement does not clear any cells.
+
+Note that if any well was permanently closed before this phase, this placement renders both of the wells permanently closed, making it impossible to clear any more cells during the game.
 
 \begin{figure}[H]
     \centering
@@ -61,3 +63,5 @@ In this phase a single $\mathbf{X}_H$ block is generated. From the invariants pr
     \caption{Possible cases in phase 2}
     \label{fig:placement}
 \end{figure}
+
+At the end of this phase, at most $8a + 4 \sum Q$ cells have been cleared in total.
