--- a/thesis/phase3.tex
+++ b/thesis/phase3.tex
@@ -52,3 +52,5 @@ In this phase the sequence $\left( \mathbf{MB}, \mathbf{MW}, \mathbf{X} \right)$
     \caption{Block placement in phase 3}
     \label{fig:placement}
 \end{figure}
+
+At the end of this phase, at most $8a + \sum Q + 10$ cells have been cleared in total.
