--- a/thesis/phase1.tex
+++ b/thesis/phase1.tex
@@ -243,4 +243,7 @@ consists of white cells in column 4, and the rows in interval
         \left[ 1, 2 \left( K-1 + \sum Q - \sum M_w \right) \right]
     \end{equation*}
 consists of black cells in column 4.
+
 \end{enumerate}
+
+At most $8a + 4 \sum Q$ cells have been cleared at the end of this phase.
