--- a/thesis/phase5.tex
+++ b/thesis/phase5.tex
@@ -1,5 +1,5 @@
 \subsubsection{Phase 5}
-When the open well has collapsed the last phase is entered. In this phase the remaining $\sum M_w - 2$ blocks are placed. The purpose of this phase is to both clear the remaning black cells in column 4, and clear the remaining white cells in column 3 and 4 by making them meet. Let $i = 0$ when block $\sum Q -  \sum M_w + 2$ is about to the place, let $i = i +1$ when a block has been placed in column 4-5. Then the following invariants hold for the open well $w$:
+When the open well has collapsed the last phase is entered. In this phase the remaining $\sum M_w - 2$ blocks are placed. The purpose of this phase is to both clear the remaning black cells in column 4, and clear the remaining white cells in column 3 and 4 by making them meet. Let $i = 0$ when block $\sum Q -  \sum M_w + 2$ is about to the placed, let $i = i +1$ when a block has been placed in column 4-5. Then the following invariants hold for the open well $w$:
 
 \begin{enumerate}
 \item Column 5 is empty
@@ -98,18 +98,18 @@ Now only three posibilites exist. We will consider how many cells can be cleared
 \begin{enumerate}
 \item $K < \sum M_w$ 
 
-    The bottom section is exhausted, therefore all the white cells in column 3 and all the black cells in column 4 are cleared. However, $\epsilon = M_w - K$ $\mathbf{LB}$ blocks will be placed which 
+    The bottom section is exhausted, therefore all the white cells in column 3 and all the black cells in column 4 are cleared. However, $\Delta = \sum M_w - K$ $\mathbf{LB}$ blocks will be placed which 
     \begin{itemize}
     \item Does not clear any black cells, since there aren't any left to match with in column 4.
     \item Does not clear any white cells, since there aren't left in column 3 to match those in column 4.
-    Hence we have only cleared $8 (M_w-2-\epsilon)$ cells.
+    Hence we have cleared $8 \left( \sum M_w-2-\Delta \right)$ cells.
     \end{itemize}
 \item $K > \sum M_w$
 
-    The bottom section is not exhausted. Therefore $\epsilon = K - M_w$ $\mathbf{LB}$ will be placed which clears 4 black cells, but not 4 white cells. Hence we have only cleared $8 (M_w - 2 -\epsilon) + 4 \epsilon$ = $8 (M_w - 2 - 0.5 \epsilon)$ cells.
+    The bottom section is not exhausted. Therefore $\Delta = K - M_w$ $\mathbf{LB}$ will be placed which clears 4 black cells, but not 4 white cells. Hence we have cleared $8 \left( \sum M_w - 2 -\Delta \right) + 4 \Delta$ cells.
 \item $K = \sum M_w$
 
-    The bottom section is exhausted exactly when the final block is placed. This means that every placed $\mathbf{LB}$ block has cleared 4 black cells and 4 white cells. Hence we have cleared $8 (M_w - 2)$ cells, the maximum amount.
+    The bottom section is exhausted exactly when the final block is placed. This means that every placed $\mathbf{LB}$ block has cleared 4 black cells and 4 white cells. Hence we have cleared $8 \left( \sum M_w - 2 \right)$ cells.
 \end{enumerate}
 
 \begin{figure}[H]
@@ -162,6 +162,8 @@ Now only three posibilites exist. We will consider how many cells can be cleared
     \caption{Gameboard after each block has been placed}
     \label{fig:afterplace}
 \end{figure}
+
+\subsection{Summing the phases}
 
 Since only the maximum amount of cells can be cleared if $K = M_w$, we have proved the the following theorem: \\
 
