--- a/thesis/phase5.tex
+++ b/thesis/phase5.tex
@@ -165,7 +165,34 @@ Now only three posibilites exist. We will consider how many cells can be cleared
 
 \subsection{Summing the phases}
 
-Since only the maximum amount of cells can be cleared if $K = M_w$, we have proved the the following theorem: \\
+When all the phases are done, the maximum amount of cleared cells boils down to three possible cases. Let $\Delta = |\sum M_w - K|$, and $C$ be the maximum amount of cleared cells. We then obtain the following equations:
+
+\begin{equation} \tag{$K < \sum M_w$}
+\begin{split}
+C & = 8a + 5 \sum Q + 4 \sum M_w + 4 - 8 \Delta  \\
+& = 8a + 5 \sum Q + 4 \sum M_w + 4 - 8 \left( \sum M_w - K\right) \phantom{+ 4K} \\
+& = 8a + 5 \sum Q + 4 + 4 \left(2K - \sum M_w \right)
+\end{split}
+\end{equation}
+
+\begin{equation} \tag{$K > \sum M_w$}
+\begin{split}
+C & = 8a + 5 \sum Q + 4 \sum M_w + 4 - 4 \Delta \\
+& = 8a + 5 \sum Q + 4 \sum M_w + 4 - 4 \left( K - \sum M_w \right) \phantom{+ 4K} \\
+& = 8a + 5 \sum Q + 4 + 4 \left(2 \sum M_w - K \right)
+\end{split}
+\end{equation}
+
+\begin{equation} \tag{$K = \sum M_w$}
+\begin{split}
+C & = 8a + 5 \sum Q + 4 \sum M_w + 4 \phantom{- 8 \Delta} \\
+& = 8a + 5 \sum Q + 4 \sum M_w + 4 + 4K \phantom{8 \left(\sum M_w + K \right)}
+\end{split}
+\end{equation}
+
+In the case of $K < \sum M_w$, it is clear that $\left(2K - \sum M_w \right) < K$. In case of $K > \sum M_w$, is is clear that $\left(2 \sum M_w - K \right) < K$. Hence the case $K = \sum M_w$ yields the maximum possible amount of cleared cells.
+
+Since $K = \sum M_w$ if and only if there exists a solution $S = \{s_1, \ldots, s_b \} \subseteq Q, \sum S = K$ to the \textit{Subset sum} instance $\langle Q, K \rangle$, we have proved the the following theorem: \\
 
 \begin{thm}
 \label{thm:nphard}
