--- a/thesis/nphard.tex
+++ b/thesis/nphard.tex
@@ -31,3 +31,7 @@ In \ref{subsub:gameplay} it is defined that for a cell to be marked and cleared 
 \input{thesis/phase4.tex}
 
 \input{thesis/phase5.tex}
+
+\input{thesis/summing.tex}
+
+\input{thesis/special.tex}
