--- a/thesis/phase5.tex
+++ b/thesis/phase5.tex
@@ -192,7 +192,7 @@ C & = 8a + 5 \sum Q + 4 \sum M_w + 4 \phantom{- 8 \Delta} \\
 
 In the case of $K < \sum M_w$, it is clear that $\left(2K - \sum M_w \right) < K$. In case of $K > \sum M_w$, is is clear that $\left(2 \sum M_w - K \right) < K$. Hence $8a + 5 \sum Q + 4 + 4K$ is the maximum amount of cleared cells in this game. This amount is only cleared when $K = \sum M_w$.
 
-Since $K = \sum M_w$ if and only if there exists a solution $S = \{s_1, \ldots, s_b \} \subseteq Q, \sum S = K$ to the \textit{Subset sum} instance $\langle Q, K \rangle$, we have proved the the following theorem: \\
+Since $K = \sum M_w$ if and only if there exists a solution $S = \{s_1, \ldots, s_b \} \subseteq Q, \sum S = K$ to the \textit{Subset sum} instance $\langle Q, K \rangle$, the reduction holds for $K > 1$.
 
 \begin{thm}
 \label{thm:nphard}
