--- a/pkg/cells.tex
+++ b/pkg/cells.tex
@@ -335,3 +335,9 @@
     \draw[dotted] (#1+1, #2+15) -- (#1+1, #2+17);
     \lumx{#1}{#2+17}
 }
+
+\newcommand{\specialboard}[2] {
+    \draw (#1, #2) -- (#1+2, #2+2);
+    \draw (#1, #2) -- (#1, #2+1);
+    \draw (#1+2, #2) -- (#1+2, #2+1);
+}
