--- a/pkg/cells.tex
+++ b/pkg/cells.tex
@@ -337,7 +337,11 @@
 }
 
 \newcommand{\specialboard}[2] {
-    \draw (#1, #2) -- (#1+2, #2+2);
-    \draw (#1, #2) -- (#1, #2+1);
-    \draw (#1+2, #2) -- (#1+2, #2+1);
+    \draw (#1, #2) -- (#1+2, #2);
+    \draw (#1, #2) -- (#1, #2+2);
+    \draw[dotted] (#1, #2+2) -- (#1, #2+4);
+    \draw (#1, #2+4) -- (#1, #2+8);
+    \draw (#1+2, #2) -- (#1+2, #2+2);
+    \draw[dotted] (#1+2, #2+2) -- (#1+2, #2+4);
+    \draw (#1+2, #2+4) -- (#1+2, #2+8);
 }
