--- a/thesis/conclusion.tex
+++ b/thesis/conclusion.tex
@@ -1,5 +1,12 @@
 \subsection{Conclusion}
 
+Since a complete reduction from \textit{Subset sum} to \textit{k-cleared-cells} was presented in~\ref{sub:nphard}, the following theorem is proven:
+
+\begin{thm}
+\label{thm:nphard}
+The (offline, no-rotation, acyclic) k-cleared-cells problem is NP-hard.
+\end{thm}
+
 Corollary~\ref{cor:np} and theorem~\ref{thm:nphard} directly yields the following corollary: \\
 
 \begin{cor}
