--- a/thesis/summing.tex
+++ b/thesis/summing.tex
@@ -1,4 +1,4 @@
-\subsection{Summing the phases}
+\subsubsection{Summing the phases}
 
 When all the phases are done, the maximum amount of cleared cells is equal to one of three equations. Let $\Delta = |\sum M_w - K|$, and $C$ be the maximum amount of cleared cells. The following is obtained:
 
