--- a/thesis/conclusion.tex
+++ b/thesis/conclusion.tex
@@ -1,6 +1,6 @@
 \subsection{Conclusion}
 
-Since a complete reduction from \textit{Subset sum} to \textit{k-cleared-cells} was presented in~\ref{sub:nphard}, the following theorem is proven:
+Since a complete reduction from \textit{Subset sum} to \textit{k-cleared-cells} was presented in~\ref{sub:nphard}, the following theorem is proven: \\
 
 \begin{thm}
 \label{thm:nphard}
