special case done

--- a/thesis/appendix.tex
+++ b/thesis/appendix.tex
@@ -18,3 +18,13 @@ Thus the maximum amount of cleared cells in the special case is
   & 8a + \sum Q + 12 + 4 \left( \sum Q - 1 \right) \\
 = \; & 8a + 5 \sum Q + 8
 \end{align*}
+
+Given by \ref{kclearednphard} $K > 1$ in the general case and therefore: 
+
+\begin{equation*}
+8a + 5 \sum Q + 8 < 8a + 5 \sum Q + 4 + 4K
+\end{equation*}
+
+\begin{cor}
+The special case can never result in the optimal amount of cleared cells.
+\end{cor}
