--- a/thesis/nphard.tex
+++ b/thesis/nphard.tex
@@ -1,4 +1,5 @@
 \subsection{Is k-cleared-cells NP-hard?}
+\label{kclearednphard}
 
 We prove that k-cleared-cells is NP-hard by constructing a reduction from the \textit{Subset sum} problem. The reduction consists of two parts: one part which considers $K > 1$ in the given \textit{Subset sum} instance, and one part which considers the special case $K = 1$. The first part is more complex and consists of five phases, whereas the second part is relatively straightforward.
 
