more discussion and some fixes

--- a/thesis/discussion.tex
+++ b/thesis/discussion.tex
@@ -3,7 +3,7 @@
 
 \subsection{Rotations}
 
-The two main ways the player can control the Lumines game found on the PSP is to rotate and move the blocks left and right. In the reduction given in this report a simplified model where the player is not allowed to rotate the blocks has been used meaning an important part of the game is not considered in the proof. It was planned to find a reduction which included rotations but because of time constraints this was not executed and a model without rotations was used instead. Intuitively rotation should have some impact on the hardness of the game. Because of the fact we found it harder to find a proper reduction of the Subset sum when a rotation model was used the possibility that Lumines is actually easier than NP-hard exist. However this does not have to be the case, rotations may as well be harder if it could be proven that an algorithm have to consider all possible ways to build terrain. During this project nothing has been found that tells us how rotations change the complexity and should therefore be examined to get a better understanding of the real game's complexity.
+The two main ways the player can control the Lumines game found on the PSP is to rotate and move the blocks left and right. A simplified model where the player is not allowed to rotate the blocks has been used in the reduction given in this report, meaning an important part of the game is not considered in the proof. It was planned to find a reduction which included rotations but because of time constraints this was not executed and a model without rotations was used instead. Intuitively rotation should have some impact on the hardness of the game. Because of the fact we found it harder to find a proper reduction of the Subset sum when a rotation model was used the possibility that Lumines is actually easier than NP-hard exist. However this does not have to be the case, rotations may as well be harder if it could be proven that an algorithm have to consider all possible ways to build terrain. During this project nothing has been found that tells us how rotations change the complexity and should therefore be examined to get a better understanding of the real game's complexity.
 
 \subsection{Sweep-line}
 
@@ -11,4 +11,8 @@ In Lumines the sweep-line moves in a constant speed from left to right. The mark
 
 \subsection{Online Lumines}
 
-In the reduction and proof of Lumines complexity presented in this paper the offline version of Lumines has been considered. This is similar to previous studies on Match-three games and Tetris. In these reports they argue that if a property can be shown in the offline version of the games intuitively it should not be easier in the online version. According to Demaine, Hoffman and Holzer, ``...it is only easier to play Tetris with complete knowledge of the future, so the difficulty of playing the offline version suggests the difficulty of playing the online version'' \cite[p. 2]{tetris}. If this is true it should also be the case for Lumines. However we do not have a proof that this is the case. Therefore the online version of Lumines should be examined in the future to get a better understanding of the real game's complexity.
+In the reduction and proof of Lumines complexity presented in this paper the offline version of Lumines has been considered. This is similar to previous studies on Match-three games and Tetris. In these reports they argue that if a property can be shown in the offline version of the games intuitively it should not be easier in the online version. According to Demaine, Hoffman and Holzer, ``...it is only easier to play Tetris with complete knowledge of the future, so the difficulty of playing the offline version suggests the difficulty of playing the online version'' \cite[p. 2]{tetris}. If this is true it should also be the case for Lumines. However none of the papers that has been examined present any proof that this is the case. Therefore the online version of Lumines should be examined in the future to research if any such proof can be conducted.
+
+\subsection{Subset sum}
+
+During the research before our reduction was conducted, none of the reductions examined used the subset sum. The most common problem to reduce from seems to be 3-SAT. It is the author's beliefs that this is the first instance concerning video game complexity using the subset sum problem. The nature of NP-completeness permits any NP-complete problem to be used in principle but some problems are inherently easier to reduce than others. The results from this report shows that the subset sum problem is suitable for use when reducing to 2D stacking grid games similar to Lumines. 
