--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -1,6 +1,6 @@
 \section{Introduction}
 
-In this report a simplified version of the game Lumines is shown to be NP-complete. First the rules of the game are formally defined. Using these definitions the NP-complete subset sum problem is reduced to a Lumines gameboard with a defined sequence of blocks. A proof is presented showing that the only way to clear a specific number of blocks in the given Lumines gameboard is if the subset sum instance is a ``yes''-instance.
+In this report a simplified model of the video game Lumines is shown to be NP-complete. The goal in this model is to clear as many cells as possible. The model is therefore similar to the original video game, but with a few added constrains. The model is proven to be in $NP$ and also a reduction from \textit{Subset sum} to the game mode is presented. 
 
 \subsection{The game}
 The video game Lumines was released in December 2004 in Japan for the PSP platform. The game was a major success for the developer Q Entertainment, and has since its original release been followed with a couple of sequels \cite{wiki:lumines}.
