--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -2,6 +2,8 @@
 
 In this report a simplified model of the video game Lumines is shown to be NP-complete. The goal in this model is to clear as many cells as possible. The model is therefore similar to the original video game, but with a few added constrains. The model is proven to be in $NP$ and also a reduction from \textit{Subset sum} to the game mode is presented. 
 
+In recent years a number of studies concerning computational complexity in video games has been conducted. 
+
 \subsection{The game}
 The video game Lumines was released in December 2004 in Japan for the PSP platform. The game was a major success for the developer Q Entertainment, and has since its original release been followed with a couple of sequels \cite{wiki:lumines}.
 \begin{figure}[H]
@@ -136,7 +138,6 @@ While the sweep-line is a core characteristic of Lumines, this report considers 
 The main Lumines goals this paper examines are:
 \begin{itemize}
         \item Is (standard mode) Lumines NP-complete?
-        \item Are all game modes of Lumines equally hard?
 \end{itemize}
 
 \subsection{Motivation}
