--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -2,7 +2,9 @@
 \label{sec:background}
 
 \subsection{Reduction}
-A reduction is an algorithm used to solve one problem with another. A reduction of a decision problem is valid if each yes-instance gives a yes-instance and each no instance gives a no instance. If the reduction is to be made in polynomial time the problem that is solved must not be harder than the problem we reduce to.\cite{reduction}
+A reduction is an algorithm used to solve one problem with another. This report consider only \textit{desicion problems}, which given some input must be either true (yes) or false (no).
+
+A reduction from any decision problem $A$ to any other decision problem $B$ is valid if each yes-instance of $A$ yields a yes-instance of $B$, and each no-instance of $A$ yields a no instance of $B$. If the reduction runs in polynomial time, $B$ must be at least as hard as $A$ to solve.\cite{reduction}
 
 \subsection{NP and PSPACE}
 NP is the complexity class of all decision problems where a yes-instance can be verified in polynomial time. If it is possible to reduce all problems in NP to a certain problem, that problem is said to be NP-hard. A problem is referred to as a NP-complete problem if it is shown that it is both in NP and NP-hard. From this follows that if it is possible to reduce a NP-complete problem to some problem in NP using polynomial time, that problem is NP-complete as well.
