--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -19,15 +19,15 @@ The \textit{Subset Sum} Problem is defined as follows \cite[p.~491]{algorithm}:
 Given natural numbers $w_1, \ldots, w_n$, and a target number $W$, is there a subset of $\{w_1, \ldots, w_n \}$ that adds up precisely to $W$?
 \end{quote}
 
-The Subset Sum Problem plays a crucial role in this report; it is the chosen tproblem to reduce to the Lumines problem. It is known to be NP-complete \cite[p.~492]{algorithm}. In fact it is a special case of the Knapsack Problem \cite[p.~491]{algorithm}, one of Karp's 21 NP-complete problems he discusses in his 1972 paper \cite{karp}.
+The Subset Sum Problem plays a crucial role in the proof presented later in this report. It is known to be NP-complete \cite[p.~492]{algorithm}. In fact it is a special case of the Knapsack Problem \cite[p.~491]{algorithm}, one of Karp's 21 NP-complete problems he discusses in his 1972 paper \cite{karp}.
 
 \subsection{Previous studies}
 
-In this section we will present some recent papers regarding computational complexity in games.
+In this section we will present some recent papers regarding computational complexity in video games.
 
 \subsubsection{Classical Nintendo Games}
 
-In the paper on Classical Nintendo Games the computational complexity of games in the popular Nintendo series Legend of Zelda, Mario, Metroid, Donkey Kong and Pokémon are proven to be either NP- or PSPACE-hard \cite{classic}. The paper states that it is easy to understand that most games are members of PSPACE because their behaviour is a deterministic function of the player's controller input. The paper focus on the reachability problem in the aforementioned games, that is if it is possible to get from point A to point B on a generalized gameboard. Using the NP-complete problem 3-SAT the authors build a framework of ``gadgets'' to prove NP-hardness. For PSPACE-hardness a similar framework is used with the True Quantified Boolean Formula. The framework gives the authors a simple way to show NP- and PSPACE-hardness by building the gadgets as gameboards in the respective games. The authors also use previous studies on the Push-1 \cite{push1} and PushPush-1 \cite{pushpushk} to show NP-hardness, respectively PSPACE-hardness in some of the games implementing these games as puzzles. 
+In one paper on Classical Nintendo Games, the computational complexity of games in the popular Nintendo series Legend of Zelda, Mario, Metroid, Donkey Kong and Pokémon are proven to be either NP- or PSPACE-hard \cite{classic}. The paper states that it is easy to understand that most games are members of PSPACE because their behaviour is a ``deterministic function of the player's controller input''. The paper focuses if it is possible to get from point A to point B on a generalized gameboard in these games. Using the NP-complete problem \textit{3-SAT} the authors build a framework of \textit{gadgets} to prove NP-hardness. For PSPACE-hardness a similar framework is used with the PSPACE-complete problem \textit{True Quantified Boolean Formula}. The framework gives the authors a simple way to show NP- and PSPACE-hardness by building the gadgets as gameboards in the respective games. The authors also use previous studies on the \textit{Push-1} \cite{push1} and \textit{PushPush-1} \cite{pushpushk} to show NP-hardness, respectively PSPACE-hardness, in some of the games implementing these problems as puzzles. 
 
 \subsubsection{Lemmings}
 
