--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -31,10 +31,10 @@ In one paper on Classical Nintendo Games, the computational complexity of games 
 
 \subsubsection{Lemmings}
 
-Lemmings is a 2D puzzle-platformer game where the objective is to guide a couple of characters called lemmings through obstacles to reach a designated exit by giving the lemmings abilities e.g. digging or building. Much like the proof of the classical Nintendo games, the proof that Lemmings is NP-complete uses gadgets. The authors use the 3-SAT to prove NP-hardness. 
+Lemmings is a 2D puzzle-platformer game where the objective is to guide a couple of characters called lemmings through obstacles to reach a designated exit by giving the lemmings abilities such as digging or building. In one paper a proof that Lemmings is NP-complete is presented that uses gadgets. This is similiar to the proof of the classical Nintendo games. The authors of the paper also use the 3-SAT problem to prove NP-hardness. 
 
 \subsubsection{Minesweeper}
-Minesweeper is a popular puzzle game shipped with the Windows operating system. The game is played on a $n \times m$ gameboard where random cells are designated to contain mines. The goal of the game is to clear all cells except the mines. When a player clears a cell and the cell is not a mine the player is presented with a digit. The digit tells the player how many adjecent cells contain mines. If there are no adjecent mines the cell is blank. The author use SAT to prove NP-hardness by building Minesweeper configurations of logic circuits e.g. NOT-, AND- and XOR-gates \cite{minesweeper}.
+Minesweeper is a popular puzzle game shipped with the Windows operating system. The game is played on a $n \times m$ gameboard where random cells are designated to contain mines. The goal of the game is to clear all cells except the ones containing the mines. In one paper on Minesweeper, the author use SAT to prove NP-hardness by building Minesweeper configurations of logic circuits consisting of NOT-, AND- and XOR-gates \cite{minesweeper}.
 
 \subsubsection{Match-three games}
 
