--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -38,7 +38,7 @@ Minesweeper is a popular puzzle game shipped with the Windows operating system. 
 
 \subsubsection{Match-three games}
 
-Candy Crush and Bejeweled are both popular puzzle games with the same concept. The game consists of grids where each cell consists one ``gem''. The player is allowed to swap a gems position in vertical and horizontal directions if she is able to match three of a kind. When three of a kind is matched, the gems are ``popped'' and the gems above the now empty cells take their place. At the same time, the empty cells at the top are filled with new gems. The authors consider the offline version off Bejeweled for their studies and show NP-hardness using 1in3PSAT. \cite{candy}
+Candy Crush and Bejeweled are both popular puzzle games with the same concept of match-three. The games consists of grids where each cell contains one ``gem''. The player is allowed to swap a gems position in vertical and horizontal directions if she is able to match three gems of the same kind. When three gems of a kind is matched, the gems are ``popped'' and the gems above the now empty cells fall down to take their place. At the same time, the empty cells at the top are filled with new gems. In one paper the authors consider the offline version of Bejeweled and shows NP-hardness for general match-three games using the NP-complete \textit{1-in-3PSAT} problem \cite{candy}.
 
 \subsubsection{Tetris}
 
