--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -48,10 +48,10 @@ shows the NP-completeness of offline Tetris wih specific goals using the NP-comp
 \subsection{Lumines and its similarities to Tetris}
 \label{subsub:sim}
 
-The existing research on Lumines largely focus on effective strategies. One paper states that there exists strategies that can never lose, no matter what sequence of pieces are dropped \cite{lumines}. This is different to Tetris where losing can be inevitable if the computer is allowed to change the sequence according to how the player organizes the pieces \cite[p. 4]{tetris}. Another relevant difference brought up in prior research is that in Lumines it is possible to create terrain that can not be cleared, while in Tetris a gameboard can always be cleared if the player is given an appropriate sequence of pieces.
+The existing research on Lumines largely focus on effective strategies. One paper states that there exists strategies that can never lose when starting on an empty gameboard, no matter what sequence of pieces are dropped \cite{lumines}. This is different to Tetris where losing can be inevitable if the computer is allowed to change the sequence according to how the player organizes the pieces \cite[p. 4]{tetris}. Another relevant difference brought up in prior research is that in Lumines it is possible to create terrain that can not be cleared, while in Tetris a gameboard can always be cleared if the player is given an appropriate sequence of pieces.
 
 The standard Lumines game is played on a $10 \times 16$-gameboard, while standard Tetris is played on a $20 \times 10$-gameboard. In both games, when any block is fixed outside of the gameboard the player loses the game. The player is also given the same kind of control of the pieces i.e. rotating, horizontal movement and dropping the piece.
 
-While in Tetris a completed row is removed instantly, the marked cells in Lumines is not removed until the sweep-line has scanned the area. This creates interesting strategies with timing which does not exist in Tetris. Waiting before dropping a piece in Tetris does not give the player an advantage more than the time to think about what to do next. In Lumines however a player can wait for the sweep-line to pass a terrain before dropping a block that would otherwise be cleared for the possibility of clearing more terrain when the sweep-line passes again.
+While in Tetris a completed row is removed instantly, the marked cells in Lumines is not removed until the sweep-line has scanned the area. This creates interesting strategies with timing which does not exist in Tetris. Waiting before dropping a piece in Tetris does not give the player an advantage more than the time to think about what to do next. In Lumines however a player can wait for the sweep-line to scan terrain before dropping a block that would otherwise be cleared for the possibility of clearing more terrain when the sweep-line scans again.
 
-The fact that falling blocks may seperate after being fixed in Lumines implies that there aren't as many ways to build unique terrain as in Tetris. Nevertheless, some significant similarities exist between the two games making the existing research on Tetris a valuable asset when considering the complexity of Lumines.
+The fact that falling blocks may seperate after being fixed in Lumines implies that there aren't as many ways to build unique terrain as in Tetris. Nevertheless some significant similarities exist between the two games, making the existing research on Tetris a valuable asset when considering the complexity of Lumines.
